<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ConfirmOrderActivity">

    <CheckBox
        android:id="@+id/Online_checkbox"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="153dp"
        android:text="Online"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:text="@string/please_write_down_reciptents_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dropoffphonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/recipient_phone_nummber"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/logininput_design"
        app:layout_constraintBottom_toTopOf="@+id/dropoffadress"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dropoffadress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="266dp"
        android:hint="@string/recipient_address"
        android:minHeight="48dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/logininput_design"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dropoffname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/recipient_name"
        android:minHeight="48dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/logininput_design"
        app:layout_constraintBottom_toTopOf="@+id/dropoffphonenumber"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/input_design"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/OnD_checkbox"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="On-Delivery"
        app:layout_constraintBottom_toTopOf="@+id/Online_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Payment" />

    <TextView
        android:id="@+id/Payment"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="Paymnet Method"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropoffadress" />

</androidx.constraintlayout.widget.ConstraintLayout>